--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -118,10 +118,8 @@
   /* social buttons */
 
   $social:
-  (facebook, $facebook-color),
   (twitter, $twitter-color),
-  (google-plus, $google-plus-color),
-  (linkedin, $linkedin-color);
+  (github, $github-color);
 
   @each $socialnetwork, $color in $social {
     &--#{$socialnetwork} {
