update footer updated block

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -43,11 +43,10 @@ layout: default
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
         {% endif %}
         {% include page__taxonomy.html %}
-        {% if page.modified %}
-          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time></p>
-        {% elsif page.date %}
-          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></p>
+        {% if page.date %}
+          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "First created:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.author %} by {{ page.author }}.{% endif %}{% if page.modifiedDate %} <strong>{{ site.data.ui-text[site.locale].updated_label | default: "Updated:" }}</strong> <time datetime="{{ page.modifiedDate | date: "%Y-%m-%d" }}">{{ page.modifiedDate | date: "%B %d, %Y" }}</time></p>{% endif %}
         {% endif %}
+
       </footer>
 
       {% include post_pagination.html %}
